--- a/.env.example
+++ b/.env.example
@@ -65,5 +65,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-GROQ_API_KEY= //isi API key dari GROQ
+GROQ_API_KEY= 
 AI_MODEL=llama3-70b-8192
